--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="fas fa-mobile-alt"></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -185,7 +185,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="fas fa-layer-group"></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -201,7 +201,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="far fa-folder"></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -218,7 +218,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="fas fa-code"></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -234,7 +234,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="far fa-envelope"></i></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -250,7 +250,7 @@
             <div class="col-lg-4 col-sm-6 single-item">
                 <div class="row">
                     <div class="col-lg-3 col-sm-3">
-                        <div class="si-icon text-center"><i class="fab fa-apple"></i></div>
+                        <div class="si-icon text-center"><i class="fas fa-download"></i></div>
                     </div>
                     <div class="col-lg-9 col-sm-9">
                         <div class="si-text">
@@ -305,10 +305,10 @@
             <div class="col-xl-7 col-l-8 col-md-10">
                 <div class="social-icon text-center">
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-apple"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-apple"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-apple"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-apple"></i></a></li>
+                        <li class="list-inline-item"><a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item"><a href="https://twitter.com//"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.google.com/"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.pinterest.com//"><i class="fab fa-pinterest-p"></i></a></li>
                     </ul>
                 </div>
             </div>
